# smartphoneCompareCamera

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3d0c1f0  README.md  Smartphone Camera Sensoren Physik.xlsx  addlensdialog.cpp  addlensdialog.h  addsensordialog.cpp  addsensordialog.h  addsmartphonedialog.cpp  addsmartphonedialog.h  camerasensor.cpp  camerasensor.h  camerasensors.json  camerasensortablewidget.cpp  camerasensortablewidget.h  lens.cpp  lens.h  lens.json  lenstablewidget.cpp  lenstablewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  phonecomparewidget.cpp  phonecomparewidget.h  phonedetailwidget.cpp  phonedetailwidget.h  sensortablemodelmanager.cpp  sensortablemodelmanager.h  smartphone.cpp  smartphone.h  smartphonecomparewidget.cpp  smartphonecomparewidget.h
android/: AndroidManifest.xml.in
backup/: camera_sensors.json
databases/: Smartphone Camera Sensoren Physik.xlsx  camera_sensors.json  lenses.json  smartphones.json
databases2Test/: camera_sensors.json  lenses.json
